# parquet-crypto-data-scraper

./: .gitignore  README.md  config.ini  main.py  pyproject.toml  requirements.txt  storage.py
config/: config.ini  config.yaml
src/: helpers.py  main.py  storage.py  ws_outputs.py
