[tool.poetry]
name = "crypto-data-scraper"
version = "0.1.0"
description = "An async crypto futures data scraper using ccxt a"
authors = ["CannedKilroy <GenericArt@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^4.2.88"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.29"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
